--- a/src/main/resources/templates/admin/system/dict_form.html
+++ b/src/main/resources/templates/admin/system/dict_form.html
@@ -53,7 +53,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="reset" class="btn btn-info">取消</button>
+                            <button type="reset" class="btn btn-info">重置</button>
                             <button type="submit" class="btn btn-success">保存</button>
                         </div>
                     </div>
