--- a/src/main/resources/templates/admin/system/index.html
+++ b/src/main/resources/templates/admin/system/index.html
@@ -4,7 +4,7 @@
 
     <title>后台主页</title>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/static/modules/admin/img/logo.ico}">
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/common/img/logo.ico}">
 
     <link rel="stylesheet" th:href="@{/modules/admin/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/modules/admin/css/font-awesome.css}" />
