--- a/src/main/resources/templates/front/blog/theme1/index.html
+++ b/src/main/resources/templates/front/blog/theme1/index.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <!--<head th:fragment="header">-->
 
-    <title>博客主页</title>
-    <meta charset="UTF-8"/>
+<head th:replace="front/blog/tools/theme1_head"></head>
 
-    <link rel="stylesheet" th:href="@{/modules/front/blog/theme1/css/style.min.css}" />
-
-    <script th:src="@{/modules/front/blog/theme1/js/jquery.min.js}"></script>
-
-    <!--https://github.com/cloudfavorites/favorites-web/blob/master/src/main/resources/templates/layout.html-->
-
-</head>
 <body class="bg-grey">
 
-<!--<header id="header" class="header bg-white">
-    <div class="navbar-container">
-        <a href="" class="navbar-logo">
-            <img th:src="@{/modules/front/blog/theme1/img/logo.png}" alt=""/>
-        </a>
-        <div class="navbar-menu">
-            <a href="#">归档</a>
-            <a href="#">友链</a>
-            <a href="#">关于</a>
-        </div>
-        <div class="navbar-search" onclick="">
-            <span class="icon-search"></span>
-            <form role="search" onsubmit="return false;">
-                <span class="search-box">
-                    <input type="text" id="search-inp" class="input" placeholder="搜索..." maxlength="30"
-                           autocomplete="off">
-                </span>
-            </form>
-        </div>
-
-    </div>
-</header>-->
-<!--<header th:include="/front/blog/theme1/header::header"/>-->
-<header th:fragment="header"/>
-
+<div th:replace="front/blog/tools/theme1_header"></div>
 
 <div class="main-content index-page clearfix">
 
     <div class="post-lists">
         <div class="post-lists-body">
+
+            <div class="post-list-item">
+                <div class="post-list-item-container">
+                    <div class="item-thumb bg-deepgrey" style="background-image:url(/modules/front/blog/theme1/img/rand/1.jpg);"></div>
+                    <a href="${permalink()}">
+                        <div class="item-desc">
+                            <p>sdfsdf</p>
+                        </div>
+                    </a>
+                    <div class="item-slant reverse-slant bg-deepgrey"></div>
+                    <div class="item-slant"></div>
+                    <div class="item-label">
+                        <div class="item-title"><a href="${permalink()}">这里是标题</a>
+                        </div>
+                        <div class="item-meta clearfix">
+                            <div class="item-meta-ico ${show_icon()}"
+                                 style="background: url(/modules/front/blog/theme1/img/bg-ico.png) no-repeat;background-size: 40px auto;"></div>
+                            <div class="item-meta-cat">
+                                这里是类别
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="post-list-item">
                 <div class="post-list-item-container">
@@ -77,199 +67,7 @@
     </div>
 </div>
 
+<div th:replace="front/blog/tools/theme1_footer"></div>
 
-
-
-
-<footer id="footer" class="footer bg-white">
-    <div class="footer-social">
-        <div class="footer-container clearfix">
-            <div class="social-list">
-                <a class="social weibo" target="blank" href="http://weibo.com/${theme_option('social_weibo')}">微博</a>
-                <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/${theme_option('social_zhihu')}">知乎</a>
-                <a class="social rss" target="blank" href="/feed">RSS</a>
-                <a class="social github" target="blank" href="https://github.com/${theme_option('social_github')}">Github</a>
-                <a class="social twitter" target="blank" href="https://twitter.com/${theme_option('social_twitter')}">Twitter</a>
-            </div>
-        </div>
-    </div>
-    <div class="footer-meta">
-        <div class="footer-container">
-            <div class="meta-item meta-copyright">
-                <div class="meta-copyright-info">
-                    <a href="${site_url()}" class="info-logo">
-                        <img src="/templates/themes/default/static/img/logo.png" alt="">
-                    </a>
-                    <div class="info-text">
-                        <p>一生有所追求.</p>
-                        <p>Powered by <a href="https://github.com/otale/tale" target="_blank" rel="nofollow">Tale</a></p>
-                        <p>&copy; 2017 <a href="https://github.com/biezhi">biezhi</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="meta-item meta-posts">
-                <h3 class="meta-title">最新文章</h3>
-                <li>
-                    <a href="#">asd</a>
-                </li>
-            </div>
-
-            <div class="meta-item meta-comments">
-                <h3 class="meta-title">最新评论</h3>
-                <li>
-                    <a href="#">asd</a>
-                </li>
-            </div>
-        </div>
-    </div>
-</footer>
-
-
-
-
-<div id="directory-content" class="directory-content">
-    <div id="directory"></div>
-</div>
-<script>
-    $('#directory').html('');
-    var postDirectoryBuild = function() {
-        var postChildren = function children(childNodes, reg) {
-                var result = [],
-                    isReg = typeof reg === 'object',
-                    isStr = typeof reg === 'string',
-                    node, i, len;
-                for (i = 0, len = childNodes.length; i < len; i++) {
-                    node = childNodes[i];
-                    if ((node.nodeType === 1 || node.nodeType === 9) &&
-                        (!reg ||
-                        isReg && reg.test(node.tagName.toLowerCase()) ||
-                        isStr && node.tagName.toLowerCase() === reg)) {
-                        result.push(node);
-                    }
-                }
-                return result;
-            },
-            createPostDirectory = function(article, directory, isDirNum) {
-                var contentArr = [],
-                    titleId = [],
-                    levelArr, root, level,
-                    currentList, list, li, link, i, len;
-                levelArr = (function(article, contentArr, titleId) {
-                    var titleElem = postChildren(article.childNodes, /^h\d$/),
-                        levelArr = [],
-                        lastNum = 1,
-                        lastRevNum = 1,
-                        count = 0,
-                        guid = 1,
-                        id = 'directory' + (Math.random() + '').replace(/\D/, ''),
-                        lastRevNum, num, elem;
-                    while (titleElem.length) {
-                        elem = titleElem.shift();
-                        contentArr.push(elem.innerHTML);
-                        num = +elem.tagName.match(/\d/)[0];
-                        if (num > lastNum) {
-                            levelArr.push(1);
-                            lastRevNum += 1;
-                        } else if (num === lastRevNum ||
-                            num > lastRevNum && num <= lastNum) {
-                            levelArr.push(0);
-                            lastRevNum = lastRevNum;
-                        } else if (num < lastRevNum) {
-                            levelArr.push(num - lastRevNum);
-                            lastRevNum = num;
-                        }
-                        count += levelArr[levelArr.length - 1];
-                        lastNum = num;
-                        elem.id = elem.id || (id + guid++);
-                        titleId.push(elem.id);
-                    }
-                    if (count !== 0 && levelArr[0] === 1) levelArr[0] = 0;
-
-                    return levelArr;
-                })(article, contentArr, titleId);
-                currentList = root = document.createElement('ul');
-                dirNum = [0];
-                for (i = 0, len = levelArr.length; i < len; i++) {
-                    level = levelArr[i];
-                    if (level === 1) {
-                        list = document.createElement('ul');
-                        if (!currentList.lastElementChild) {
-                            currentList.appendChild(document.createElement('li'));
-                        }
-                        currentList.lastElementChild.appendChild(list);
-                        currentList = list;
-                        dirNum.push(0);
-                    } else if (level < 0) {
-                        level *= 2;
-                        while (level++) {
-                            if (level % 2) dirNum.pop();
-                            currentList = currentList.parentNode;
-                        }
-                    }
-                    dirNum[dirNum.length - 1]++;
-                    li = document.createElement('li');
-                    link = document.createElement('a');
-                    link.href = '#' + titleId[i];
-                    link.innerHTML = !isDirNum ? contentArr[i] :
-                    dirNum.join('.') + ' ' + contentArr[i] ;
-                    li.appendChild(link);
-                    currentList.appendChild(li);
-                }
-                directory.appendChild(root);
-            };
-        createPostDirectory(document.getElementById('post-content'),document.getElementById('directory'), true);
-    };
-    postDirectoryBuild();
-</script>
-
-
-<script src="//cdn.bootcss.com/headroom/0.9.1/headroom.min.js"></script>
-<script src="//cdn.bootcss.com/highlight.js/9.9.0/highlight.min.js"></script>
-<script src="//cdn.bootcss.com/instantclick/3.0.1/instantclick.min.js"></script>
-<script type="text/javascript">
-    #if(is_post)
-        var postDirectory = new Headroom(document.getElementById("directory-content"), {
-            tolerance: 0,
-            offset : 100,
-            classes: {
-                initial: "initial",
-                pinned: "pinned",
-                unpinned: "unpinned"
-            }
-        });
-    #end
-    var header = new Headroom(document.getElementById("header"), {
-        tolerance: 10,
-        offset : 80,
-        classes: {
-            initial: "animated",
-            pinned: "slideDown",
-            unpinned: "slideUp"
-        }
-    });
-    header.init();
-    $('#search-inp').keypress(function (e) {
-        var key = e.which; //e.which是按键的值
-        if (key == 13) {
-            var q = $(this).val();
-            if (q && q != '') {
-                window.location.href = '/search/' + q;
-            }
-        }
-    });
-</script>
-<script data-no-instant>
-    InstantClick.on('change', function (isInitialLoad) {
-        var blocks = document.querySelectorAll('pre code');
-        for (var i = 0; i < blocks.length; i++) {
-            hljs.highlightBlock(blocks[i]);
-        }
-        if (isInitialLoad === false) {
-            if (typeof ga !== 'undefined') ga('send', 'pageview', location.pathname + location.search);
-        }
-    });
-    InstantClick.init();
-</script>
 </body>
 </html>
