--- a/src/main/resources/templates/admin/blog/article_list.html
+++ b/src/main/resources/templates/admin/blog/article_list.html
@@ -11,7 +11,7 @@
             <div class="panel-body">
                 <div class="row">
 
-                    <form name="dict_typeForm" th:attr="action=@{/admin/system/dict/findByType}" method="post">
+                    <!--<form name="dict_typeForm" th:attr="action=@{/admin/system/dict/findByType}" method="post">
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="control-label col-md-4">字典类型</label>
@@ -26,9 +26,9 @@
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </form>-->
 
-                    <form name="dict_desForm" th:attr="action=@{/admin/system/dict/desLike}" method="post">
+                    <!--<form name="dict_desForm" th:attr="action=@{/admin/system/dict/desLike}" method="post">
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="control-label col-md-4">描述查询</label>
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </form>-->
 
                 </div>
             </div>
@@ -57,9 +57,9 @@
 
     <nav>
         <ul class="pager">
-            <li class="previous"><span><strong>字典列表</strong></span></li>
+            <li class="previous"><span><strong>文章列表</strong></span></li>
             <li class="next">
-                <a class="text-success" th:href="@{/admin/system/dict/form/null}" target="main"><span class="glyphicon glyphicon-plus"></span>添加</a>
+                <a class="text-success" th:href="@{/admin/blog/article/form/null}" target="main"><span class="glyphicon glyphicon-plus"></span>发布文章</a>
             </li>
         </ul>
     </nav>
@@ -70,35 +70,51 @@
 
             <table class="table table-striped table-bordered table-hover">
                 <colgroup>
-                    <col style="width:10%">
-                    <col style="width:15%">
-                    <col style="width:30%">
                     <col style="width:15%">
                     <col style="width:10%">
-                    <col style="width:20%">
+                    <col style="width:5%">
+                    <col style="width:10%">
+                    <col style="width:10%">
+                    <col style="width:7%">
+                    <col style="width:7%">
+                    <col style="width:7%">
+                    <col style="width:7%">
+                    <col style="width:7%">
+                    <col style="width:15%">
                 </colgroup>
                 <thead>
                 <tr>
-                    <th>键值</th>
-                    <th>标签</th>
-                    <th>类型</th>
-                    <th>描述</th>
-                    <th>排序</th>
+                    <th>文章标题</th>
+                    <th>缩略封面</th>
+                    <th>文章类别</th>
+                    <th>创建时间</th>
+                    <th>发布时间</th>
+                    <th>发布状态</th>
+                    <th>允许评论</th>
+                    <th>评论总数</th>
+                    <th>所属用户</th>
+                    <th>所属类型</th>
                     <th>操作</th>
                 </tr>
                 </thead>
                 <tbody ui-sortable>
                     <th:block th:each="form:${pageList.getContent()}">
                         <tr>
-                            <td><th:block th:text="${form.value}"/></td>
-                            <td><th:block th:text="${form.label}"/></td>
+                            <td><th:block th:text="${form.title}"/></td>
+                            <td><th:block th:text="${form.pictureUrl}"/></td>
+                            <td><th:block th:text="${form.category}"/></td>
+                            <td><th:block th:text="${form.createDate}"/></td>
+                            <td><th:block th:text="${form.releaseDate}"/></td>
+                            <td><th:block th:text="${form.releaseState}"/></td>
+                            <td><th:block th:text="${form.ifComment}"/></td>
+                            <td><th:block th:text="${form.commentNum}"/></td>
+                            <td><th:block th:text="${form.userName}"/></td>
                             <td><th:block th:text="${form.type}"/></td>
-                            <td><th:block th:text="${form.description}"/></td>
-                            <td><th:block th:text="${form.sort}"/></td>
                             <td>
-                                <a th:href="@{'/admin/system/dict/form/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit"></span>编辑</button></a>
-                                <a th:href="@{'/admin/system/dict/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()"><button class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</button></a>
-                                <a th:href="@{'/admin/system/dict/addKey/'+${form.type}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">添加键值</button></a>
+                                <a th:href="@{'/admin/blog/article/form/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit"></span>编辑正文</button></a>
+                                <a th:href="@{'/admin/blog/article/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()"><button class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</button></a>
+                                <a th:href="@{'/admin/blog/article/addKey/'+${form.type}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">发布</button></a>
+                                <a th:href="@{'/admin/blog/article/addKey/'+${form.type}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">预览</button></a>
                             </td>
                         </tr>
                     </th:block>
@@ -107,7 +123,7 @@
         </div>
     </div>
 
-    <div th:replace="admin/tools/page"></div>
+    <!--<div th:replace="admin/tools/page"></div>-->
 </div>
 
 </body>
