--- a/src/main/resources/templates/admin/system/login.html
+++ b/src/main/resources/templates/admin/system/login.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" th:href="@{/common/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/modules/admin/css/login_animate.css}" />
-    <link rel="stylesheet" th:href="@{/modules/admin/css/login.css}" />
+    <link type="text/css" rel="stylesheet" th:href="@{/common/css/bootstrap.min.css}" />
+    <link type="text/css" rel="stylesheet" th:href="@{/modules/admin/css/login_animate.css}" />
+    <link type="text/css" rel="stylesheet" th:href="@{/modules/admin/css/login.css}" />
 
 </head>
 
