--- a/src/main/resources/templates/admin/blog/article_content.html
+++ b/src/main/resources/templates/admin/blog/article_content.html
@@ -48,7 +48,7 @@
             path: "/modules/admin/makedown/lib/",
             imageUpload : true,
             imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-            imageUploadURL : "<%=basePath%>/admin/article/uploadfile",
+            imageUploadURL : "/admin/system/picture/uploadfile",
             emoji:true,
             previewTheme : "dark",
             saveHTMLToTextarea : true
