--- a/src/main/resources/templates/admin/system/dict_list.html
+++ b/src/main/resources/templates/admin/system/dict_list.html
@@ -50,6 +50,16 @@
                         </div>
                     </form>
 
+
+                    <nav>
+                        <ul class="pager">
+
+                            <li class="next">
+                                <a class="text-success" th:href="@{/admin/system/dict/form/null}" target="main"><span class="glyphicon glyphicon-plus"></span>添加</a>
+                            </li>
+                        </ul>
+                    </nav>
+
                 </div>
             </div>
         </div>
