--- a/src/main/resources/templates/admin/system/index.html
+++ b/src/main/resources/templates/admin/system/index.html
@@ -164,6 +164,24 @@
                             </a>
                         </li>
                         <li>
+                            <a th:href="@{/admin/security/dept/findAll}" class="dropdown-toggle" target="main">
+                                <i class="fa fa-user-secret"></i>部门管理
+                                <span class="menu-text"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/security/role/findAll}" class="dropdown-toggle" target="main">
+                                <i class="fa fa-user-secret"></i>角色管理
+                                <span class="menu-text"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/security/menu/findAll}" class="dropdown-toggle" target="main">
+                                <i class="fa fa-user-secret"></i>菜单管理
+                                <span class="menu-text"></span>
+                            </a>
+                        </li>
+                        <li>
                             <a th:href="@{/admin/system/metas/findAll}" class="dropdown-toggle" target="main">
                                 <i class="fa fa-globe"></i>网站管理
                                 <span class="menu-text"></span>
