--- a/src/main/resources/templates/admin/blog/article_list.html
+++ b/src/main/resources/templates/admin/blog/article_list.html
@@ -73,14 +73,14 @@
                     <col style="width:15%">
                     <col style="width:10%">
                     <col style="width:5%">
-                    <col style="width:15%">
-                    <col style="width:15%">
+                    <col style="width:12%">
+                    <col style="width:12%">
                     <col style="width:5%">
                     <col style="width:5%">
                     <col style="width:5%">
                     <col style="width:5%">
                     <col style="width:5%">
-                    <col style="width:15%">
+                    <col style="width:21%">
                 </colgroup>
                 <thead>
                 <tr>
@@ -111,10 +111,11 @@
                             <td><th:block th:text="${form.userName}"/></td>
                             <td><th:block th:text="${form.type}"/></td>
                             <td>
-                                <a th:href="@{'/admin/blog/article/edit/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit"></span>编辑</button></a>
+                                <a th:href="@{'/admin/blog/article/form/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit"></span>编辑</button></a>
+                                <a th:href="@{'/admin/blog/article/edit/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-info"><span class="glyphicon glyphicon-edit"></span>正文</button></a>
                                 <a th:href="@{'/admin/blog/article/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()"><button class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</button></a>
                                 <a th:href="@{'/admin/blog/article/addKey/'+${form.type}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">发布</button></a>
-                                <a th:href="@{'/admin/blog/article/addKey/'+${form.type}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">预览</button></a>
+                                <a th:href="@{'/admin/blog/article/view/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">预览</button></a>
                             </td>
                         </tr>
                     </th:block>
@@ -123,7 +124,7 @@
         </div>
     </div>
 
-    <!--<div th:replace="admin/tools/page"></div>-->
+    <div th:replace="admin/tools/page"></div>
 </div>
 
 </body>
