--- a/src/main/resources/templates/admin/security/user_list.html
+++ b/src/main/resources/templates/admin/security/user_list.html
@@ -15,7 +15,7 @@
 <section class="content-header">
     <ol id="nav_title" class="breadcrumb" style="position: static; float: none;">
         <li class="active"><i class="fa fa-home" style="font-size: 20px; position: relative; top: 2px; left: -3px;"></i> &nbsp; 首页</li>
-        <li class="active"> 角色管理</li>
+        <li class="active">用户管理</li>
     </ol>
 </section>
 <div class="rightinfo">
