--- a/src/main/resources/templates/admin/system/login.html
+++ b/src/main/resources/templates/admin/system/login.html
@@ -32,9 +32,9 @@
 
                 <p class="text-muted text-center"> <a href="login.html#"><small>忘记密码了？</small></a> | <a href="register.html">注册一个新账号</a></p>
                 <p class="text-muted text-center">
-                    <a href=""><img th:src="@{/modules/admin/img/qq.png}"/></a>
-                    <a href=""><img th:src="@{/modules/admin/img/weixin.png}"/></a>
-                    <a href=""><img th:src="@{/modules/admin/img/weibo.png}"/></a>
+                    <a href=""><img th:src="@{/modules/admin/img/qq.png}" th:height="80" th:width="80"/></a>
+                    <a href=""><img th:src="@{/modules/admin/img/weixin.png}" th:height="80" th:width="80"/></a>
+                    <a href=""><img th:src="@{/modules/admin/img/weibo.png}" th:height="80" th:width="80"/></a>
                 </p>
             </form>
         </div>
